@@ -503,6 +503,9 @@ Release 0.21.1 - Unreleased
     HDFS-1728. SecondaryNameNode.checkpointSize is in bytes but not in MB.
     (szetszwo)
 
+    HDFS-1596. Replace fs.checkpoint.* with dfs.namenode.checkpoint.*
+    in documentations.  (Harsh J Chouraria via szetszwo)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
